###### TWE 4.9-1 RELEASED ######
2013-02-13 Sasa Bojanic <sasaboy@together.at>
   # Now validating variables' InitialValue expressions 
   # Shark mode: now validating variables' InitialValue cross/self/implicit cross references
   # Shark mode: now validating uniqueness of variables considering Shark's system variables and configuration parameters
   
2013-02-13 Sasa Bojanic <sasaboy@together.at>
   # Improved ActualParameters panel
   # Shark mode: support for configuration choice and system variables
   
2013-02-12 Sasa Bojanic <sasaboy@together.at>
   # Shark mode:
      - changed "system" variable naming and validation according to new Shark features (SharkPanelGenerator and SharkXPDLValidator changes)
      - example (shark) XPDLs changed according to the changes made in Shark

2013-02-08 Sasa Bojanic <sasaboy@together.at>
   # Shark mode: 
      - improved Email configuration section (new checkbox to enable/disable configuration - disabling means removing all EAs)
      - Attachments and Attachment names joined into the single control
      - Changed names of the controls
   
###### TWE 4.8-1 RELEASED ######
2013-01-25 Sasa Bojanic <sasaboy@together.at>
   # Shark mode: supported CHECK_FOR_COMPLETION extended attribute

2013-01-16 Sasa Bojanic <sasaboy@together.at>
   # Initial testcase documentation added to the project
   # Validating dynamic script variable self/cross/implicit cross references
   
2012-12-28 Sasa Bojanic <sasaboy@together.at>
   # Supported BasicType DATE and TIME data types
   # leave_request.xpdl and new_employee.xpdl are now utilizing DATE data type
   
2012-12-27 Sasa Bojanic <sasaboy@together.at>
   # Property panel for artifacts changed: now panel contains only neccessary properties depending on artifact type (Annotation or DataObject)

2012-11-09 Sasa Bojanic <sasaboy@together.at>
   # Updated to new TXM (jXPDL) library