@@ -74,6 +74,7 @@ ERROR_DYNAMICSCRIPT_VARIABLE_IMPLICIT_CROSS_REFERENCES_NOT_ALLOWED = Dynamic scr
 ERROR_VARIABLE_INITIAL_VALUE_SELF_REFERENCES_NOT_ALLOWED = Self-references are not allowed inside Variables' InitialValue expression
 ERROR_VARIABLE_INITIAL_VALUE_CROSS_REFERENCES_NOT_ALLOWED = Cross-references are not allowed inside Variables' InitialValue expression
 ERROR_VARIABLE_INITIAL_VALUE_IMPLICIT_CROSS_REFERENCES_NOT_ALLOWED = Implicit cross-references are not allowed inside Variables' InitialValue expression
+ERROR_VARIABLE_INITIAL_VALUE_DYNAMICSCRIPT_VARIABLE_REFERENCES_NOT_ALLOWED = References to dynamic script variables are not allowed inside Variables' InitialValue expression
 
 ToolAgentClassKey=Tool agent
 ToolAgentClassProxyKey=Tool agent proxy
