@@ -66,6 +66,7 @@
 #Missing translation -> ERROR_VARIABLE_INITIAL_VALUE_SELF_REFERENCES_NOT_ALLOWED = Self-references are not allowed inside Variables' InitialValue expression
 #Missing translation -> ERROR_VARIABLE_INITIAL_VALUE_CROSS_REFERENCES_NOT_ALLOWED = Cross-references are not allowed inside Variables' InitialValue expression
 #Missing translation -> ERROR_VARIABLE_INITIAL_VALUE_IMPLICIT_CROSS_REFERENCES_NOT_ALLOWED = Implicit cross-references are not allowed inside Variables' InitialValue expression
+#Missing translation -> ERROR_VARIABLE_INITIAL_VALUE_DYNAMICSCRIPT_VARIABLE_REFERENCES_NOT_ALLOWED = References to dynamic script variables are not allowed inside Variables' InitialValue expression
 
 #Missing translation -> ToolAgentClassKey=Tool agent
 #Missing translation -> ToolAgentClassProxyKey=Tool agent proxy
