@@ -67,6 +67,7 @@ ERROR_DYNAMICSCRIPT_VARIABLE_IMPLICIT_CROSS_REFERENCES_NOT_ALLOWED = Nije dozvol
 ERROR_VARIABLE_INITIAL_VALUE_SELF_REFERENCES_NOT_ALLOWED = Nije dozvoljeno samo-referenciranje unutar 'InitialValue' izraza varijable
 ERROR_VARIABLE_INITIAL_VALUE_CROSS_REFERENCES_NOT_ALLOWED = Nije dozvoljeno uzajamno-referenciranje unutar 'InitialValue' izraza varijable
 ERROR_VARIABLE_INITIAL_VALUE_IMPLICIT_CROSS_REFERENCES_NOT_ALLOWED = Nije dozvoljeno implicitno uzajamno-referenciranje unutar 'InitialValue' izraza varijable
+ERROR_VARIABLE_INITIAL_VALUE_DYNAMICSCRIPT_VARIABLE_REFERENCES_NOT_ALLOWED = Nije dozvoljeno referenciranje dinami\u010Dkih skript varijabli unutar 'InitialValue' izraza varijable
 
 ToolAgentClassKey=Tool agent
 ToolAgentClassProxyKey=Tool agent proxy
