@@ -85,7 +85,7 @@ HideElements.XMLTablePanel.ExtendedAttributes.Name = JaWE_CONFIGURATION JaWE_TYP
 #ShowColumns.XMLTablePanel.Associations = Id Name Source Target AssociationDirection
 #ShowColumns.XMLTablePanel.DataFields = Id Name DataType IsArray InitialValue
 #ShowColumns.XMLTablePanel.ExtendedAttributes = Name Value
-#ShowColumns.XMLTablePanel.FormalParameters = Id Name Mode DataType IsArray
+#ShowColumns.XMLTablePanel.FormalParameters = Id Name Mode DataType IsArray InitialValue
 #ShowColumns.XMLTablePanel.Namespaces = Name location
 #ShowColumns.XMLTablePanel.Participants = Id Name ParticipantType
 #ShowColumns.XMLTablePanel.Pools = Id Name Orientation Process Lanes
