@@ -80,7 +80,7 @@
 #ShowColumns.XMLTablePanel.Artifacts = Id Name ArtifactType TextAnnotation
 #ShowColumns.XMLTablePanel.DataFields = Id Name DataType IsArray InitialValue
 #ShowColumns.XMLTablePanel.ExtendedAttributes = Name Value
-#ShowColumns.XMLTablePanel.FormalParameters = Id Name Mode DataType IsArray
+#ShowColumns.XMLTablePanel.FormalParameters = Id Name Mode DataType IsArray InitialValue
 #ShowColumns.XMLTablePanel.Namespaces = Name location
 #ShowColumns.XMLTablePanel.Participants = Id Name ParticipantType
 #ShowColumns.XMLTablePanel.Pools = Id Name Orientation Process Lanes
